<resources>
    <string name="app_name">Hancel</string>
    <string name="dialog_alarm_desc">Favor de deshabilitar la alarma</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="Contrasenia2">Confirmar contraseña</string>
    <string name="registration">Registrarme</string>
    <string name="Ingresar">Ingresar</string>
    <string name="errores">Errores</string>
    <string name="Email">Email</string>
    <string name="EmailConfirm">Confirmar email</string>
    <string name="crearcuenta">Crear nueva cuenta</string>
    <string name="Alerta">Alerta</string>
    <string name="Continuar">Continuar</string>
    <string name="registro1">Registro Hancel</string>
    <string name="registro2">Registro: paso 2 de 4</string>
    <string name="registro3">Registro: paso 3 de 4</string>
    <string name="registro4">Registro: paso 4 de 4</string>
    <string name="ingreseDatos">Ingrese los siguientes datos</string>
    <string name="ingreseONGS">Seleccione las organizaciones a las que se enviarán alertas</string>
    <string name="ingreseContactos">Es necesario seleccionar al menos un usuario (o más) al que se le enviarán alertas</string>
    <string name="finRegistro"> Ha concluido su registro en Hancel. Pulse Continuar para empezar a utilizar Hancel</string>
    <string name="welcomeHancel">Bienvenido a Hancel</string>
    <string name="ultima">ÚLTIMA ALERTA:</string>
    <string name="programarrastreo">Programar rastreo</string>
    <string name="current_track_info">Rastreo programado para:</string>
    <string name="track">Rastreo</string>
    <string name="sms">Mensaje</string>
    <string name="call">Llamada</string>
    <string name="contacts">Contactos</string>
    <string name="net">Anillo</string>
    <string name="chat">Chat</string>
    <string name="description_chat">Chat cifrado</string>
    <string name="cancel">Cancelar</string>
    <string name="logout">Salir</string>
    <string name="edit">Modificar</string>
    <string name="share">Compartir</string>
    <string name="send_picture">Enviar foto</string>
    <string name="send_message">Enviar</string>
    <string name="content_description_cancel"></string>
    <string name="uploading_image">Cargando</string>
    <string name="remote_composing">Escribiendo...</string>
    <string name="download_image">Descargando</string>
    <string name="content_description_message_status">Estado</string>
    <string name="image_picker_title">Seleccione la fuente</string>
    <string name="network_unavailable">Sin conexion a Internet</string>
    <string name="login_failed">Nombre de usuario y/o contraseña incorrectos</string>
    <string name="slide0">Crea anillos con tus contactos y alertarlos cuando estes en peligro</string>
    <string name="slide1">Comparte tu ubicación en zonas peligrosas usando la función rastreo</string>
    <string name="slide2">Usa el botón de alerta sí afrontas situaciones de peligro inevitabe</string>
    <string name="slide3">Llama a usuarios Hancel usando tu plan de datos o red WIFI</string>
    <string name="slide4">Chatea con otros usuarios Hancel. Todos tus mensajes serán cifrados</string>
    <string name="slide5"><b>Ten en cuenta: </b>Hancel envía las notificaciones como mensaje de texto</string>
    <string name="slide6"><b>Ten en cuenta: </b>Hancel envía las notificaciones como mensaje de texto</string>
    <string name="slide7"><b>Ten en cuenta: </b>Hancel envía las notificaciones como mensaje de texto</string>
    <string name="pref_disable_account">Deshabilitar</string>
    <string name="pref_tunnel">Túnel</string>
    <string name="pref_tunnel_host">Nombre del host </string>
    <string name="pref_tunnel_port">Puerto</string>
    <string name="pref_tunnel_mode">Modo</string>
    <string-array name="tunnel_mode_entries">
        <item>Desabilitado</item>
        <item>Solo 3G</item>
        <item>Siempre</item>
        <item>Auto</item>
    </string-array>
    <string name="incall_notif_active">Llamada de voz en curso</string>
    <string name="incall_notif_paused">Llamada activa en pausa</string>
    <string name="incall_notif_video">Llamada de videocaptura en curso</string>
    <string name="not_ready_to_make_new_call">No disponible para una nueva llamada</string>
    <string name="bad_target_uri">Mal contacto : %s</string>
    <string name="reset_sas_fmt">Reajuste verificado %s</string>
    <string name="verify_sas_fmt">Verificar %s</string>
    <string name="communication_encrypted">Cifrado</string>
    <string name="waiting_for_startup">Iniciando</string>
    <string name="couldnt_accept_call">Se produjo un error al aceptar la llamada</string>
    <string name="error_adding_new_call">Error al añadir nueva llamada</string>
    <string name="transfer_started">Transferencia iniciada</string>
    <string name="transfer_dialog_title">Transferir llamada a</string>
    <string name="transfer_to_new_call">Nueva llamada</string>
    <string name="resume_dialog_title">Reanudar llamada</string>
    <string name="cannot_resume_paused_by_remote_call">No se puede reanudar la llamada en pausa de forma remota</string>
    <string name="conf_show_details_text">Mostrar detalles</string>
    <string name="skipable_error_service_not_ready">Aviso: el servicio no está disponible</string>
    <string name="close_button_text">Cerrar</string>
    <string name="status_conf_call">Conf</string>
    <string name="status_active_call">Activar</string>
    <string name="state_paused">Pausado</string>
    <string name="state_paused_by_remote">Pausado de forma remota</string>
    <string name="state_streams_running"></string>
    <string name="state_incoming_received">Llamada entrante</string>
    <string name="state_outgoing_ringing">Timbrando</string>
    <string name="state_outgoing_progress">Llamando</string>
    <string name="mutemic_button_txt">Silenciar</string>
    <string name="speaker_button_txt">Altavoz</string>
    <string name="bluetooth_button_txt">Bluetooth</string>
    <string name="cancelButtonText">Cancelar</string>
    <string name="AddCallButtonText">Añadir llamada</string>
    <string name="TransferCallButtonText">Transferir llamada</string>
    <string name="conf_admin_choice_enter">Ingresar a conferencia telefónica</string>
    <string name="conf_admin_choice_leave">Dejar momentáneamente la conferencia telefónica</string>
    <string name="conf_admin_choice_terminate">Terminar conferencia telefónica</string>
    <string name="hangup">Colgar</string>
    <string name="conf_simple_merge_bt_txt">Unirse</string>
    <string name="conf_simple_transfer_bt_txt">Transferir</string>
    <string name="conf_simple_video_bt_txt">Video</string>
    <string name="conf_simple_no_current_call">Ninguna llamada activa</string>
    <string name="show_send_dtmfs_button">Teclado de marcación</string>
    <string name="conf_conference">Conferencia telefónica</string>
    <string name="in_conf">Es parte de ella</string>
    <string name="in_conf_leave">Salir</string>
    <string name="out_conf">Está fuera de ella</string>
    <string name="out_conf_enter">Entrar</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_use_specific_mode_title">Usar modo hack específico</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODO_NORMAL (por defecto), 2=MODO_EN_LLAMADA</string>
    <string name="pref_audio_hacks_use_routing_api_title">Usar routing API hack</string>
    <string name="pref_audio_hacks_use_galaxys_hack_title">Usar Galaxy S audio hack</string>
    <string name="pref_audio_soft_volume_title">Usar software de volumen</string>
    <string name="pref_ipv6_title">Usar ipv6 en lugar de ipv4</string>
    <string name="error_while_accepting_pending_call">Error al aceptar la llamada en espera</string>
    <string name="incoming_call_dialog_title">%s le está llamando</string>
    <string name="accept">Aceptar</string>
    <string name="decline">Rechaza</string>
    <string name="unknown_incoming_call_name">Desconocido</string>
    <string name="pref_network_title">Red</string>
    <string name="pref_transport">Transporte</string>
    <string name="pref_transport_udp">UDP</string>
    <string name="pref_transport_tcp">TCP</string>
    <string name="pref_transport_tls">TLS</string>
    <string name="pref_transport_use_random_ports">Usar puertos aleatorios</string>
    <string name="pref_sip_port_title">Puerto SIP a usar</string>
    <string name="at_least_a_protocol">Se requiere al menos un elemento</string>
    <string name="first_launch_ok">Registro exitoso</string>
    <string name="error">Error</string>
    <string name="click_to_show_first_login_view">Iniciar</string>
    <string name="dialer_null_on_new_intent">Aplicación no disponible</string>
    <string name="pref_add_account">Añadir cuenta</string>
    <string name="no_phone_numbers">No hay números de teléfono encontrado para %s</string>
    <string name="filter_contacts">Filtrar contactos</string>
    <string name="title_numbers_dialog">Números de teléfono de %s\</string>
    <string name="pref_delete_account">Eliminar esta cuenta</string>
    <string name="pref_default_account">Usar como predeterminado</string>
    <string name="pref_echo_canceller_calibration">Calibración de cancelador de eco</string>
    <string name="pref_video_use_front_camera_title">Usar cámara frontal</string>
    <string name="pref_video">Video</string>
    <string name="pref_preferences">Preferencias</string>
    <string name="pref_video_codec_h263_title">H263</string>
    <string name="pref_video_codec_mpeg4_title">MPEG4</string>
    <string name="pref_video_codec_h264_title">H264</string>
    <string name="pref_video_codecs_title">Códec</string>
    <string name="pref_preferred_video_size">Tamaño del video preferido</string>
    <string name="menu_videocall_back_to_dialer_title">Pantaña del marcador</string>
    <string name="menu_videocall_switch_camera_title">Cámara frontal/posterior</string>
    <string name="no_call_history">Sin llamadas en su historial</string>
    <string name="no_missed_call_history">Sin llamadas perdidas en su historial</string>
    <string name="no_contact">Sin contactos en su agenda de direcciones</string>
    <string name="no_rings">Sin anillos configurados</string>
    <string name="content_description_add_contact">Añadir al botón de contacto</string>
    <string name="content_description_add_ring">Añadir al botón de anillo</string>
    <string name="content_description_delete"></string>
    <string name="content_description_edit"></string>
    <string name="content_description_validate"></string>
    <string name="content_description_all_calls"></string>
    <string name="content_description_missed_calls"></string>
    <string name="button_edit">Editar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_ok">Guardar</string>
    <string name="button_ok_ring">Guardar</string>
    <string name="button_add_ring">Nuevo</string>
    <string name="button_all_call">Todos</string>
    <string name="button_missed_call">Perdida</string>
    <string name="button_delete_all">Eliminar </string>
    <string name="button_delete_ring">Eliminar anillo </string>
    <string name="ring_name">Nombre</string>
    <string name="ring_always">Notificar</string>
    <string name="new_ring">Crear Anillo</string>
    <string name="do_it_later">Lo haré después ></string>
    <string name="registration_info">Hemos sincronizado los contactos de tu móvil. <b>Para empezar a usar las alertas</b>, crea un anillo de seguridad con tus contactos cercanos o crea uno nuevo.</string>
    <string name="loginButtonText">Ingresar</string>
    <string name="select_rings_notify">Notificar</string>
    <string name="userWelcomeTitle">Te damos la bienvenida a Hancel</string>
    <string name="ring_add_contacts">+<ul>Agregar contactos</ul></string>
</resources>