<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolsbar_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deleteAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_delete"
            android:contentDescription="@string/content_description_delete"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_delete_all"
            android:textColor="@drawable/text_button" />

        <TextView
            android:id="@+id/allCalls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_all"
            android:contentDescription="@string/content_description_all_calls"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_all_call"
            android:textColor="@drawable/text_switch_button_color" />

        <TextView
            android:id="@+id/missedCalls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_missed"
            android:contentDescription="@string/content_description_missed_calls"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_missed_call"
            android:textColor="@drawable/text_switch_button_color" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_edit"
            android:contentDescription="@string/content_description_edit"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_edit"
            android:textColor="@drawable/text_button" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/history_ok"
            android:contentDescription="@string/content_description_validate"
            android:gravity="center"
            android:paddingTop="20dp"
            android:scaleType="centerCrop"
            android:text="@string/button_ok"
            android:textColor="@drawable/text_button"
            android:visibility="gone" />

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="@color/transparent"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <TextView
        android:id="@+id/noCallHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_call_history"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@drawable/text_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noMissedCallHistory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_missed_call_history"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@drawable/text_color"
        android:visibility="gone" />

</LinearLayout>
