<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_57x57" />


    <EditText
        android:id="@+id/txtUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/Usuario"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUser"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Contrasenia"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textCursorDrawable="@null" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:layout_below="@id/txtPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/loginButtonText" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:backgroundTint="@color/accent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/registration" />


    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/errores"
        android:textColor="@color/accent"
        android:visibility="gone"

        />

</RelativeLayout>
