<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/background_app"
	android:paddingTop="10dp"
	android:paddingBottom="10dp"
	android:orientation="vertical" >

	<GridLayout
		android:id="@+id/layoutCurrentTrack"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:visibility="visible">

		<!--ImageView
			android:contentDescription="@string/content_description_contact_picture"
			android:id="@+id/iconTrack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:adjustViewBounds="true"
			android:scaleType="centerInside"
			android:layout_rowSpan="2"
			android:src="@drawable/tracking" /-->

		<TextView
			android:id="@+id/title"
			style="@style/TextoInstruccion"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:gravity="center"
			android:textStyle="bold"
			android:text="@string/ultima"
			android:textColor="@color/background_header"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/txtUltimaAlerta"
			style="@style/TextoInstruccion"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:gravity="center"
			android:text="15 Abril 2015"
			android:textColor="@color/background_header"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</GridLayout>

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center"
		android:id="@+id/layoutTrackOptions"
		android:visibility="visible">

		<Button
			android:id="@+id/btnCancelCurrentTrack"
			style="@style/button_link"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="5dp"
			android:visibility="visible"
			android:text="@string/cancel"/>

		<Button
			android:id="@+id/btnModifyCurrentTrack"
			style="@style/button_link"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="5dp"
			android:visibility="visible"
			android:text="@string/edit"/>


		<Button
			android:id="@+id/btnShareCurrentTrack"
			style="@style/inner_app_button"
			android:layout_width="110dp"
			android:layout_height="35dp"
			android:layout_gravity="center"
			android:layout_marginTop="5dp"
			android:visibility="visible"
			android:scaleType="centerCrop"
			android:adjustViewBounds="true"
            android:drawableLeft="@drawable/share50"
			android:text="@string/share"/>

	</GridLayout>
</LinearLayout>    
